# rust_jazz_reader

./: .gitignore  Cargo.toml  README.md
sql/: README.md  create_database.sql  create_tables.sql  delete_feed.sql  delete_feed_posts.sql  forget_url.sql  insert_feed.sql  insert_post.sql  insert_url.sql  mark_as_read.sql  select_feed.sql  select_feed_posts.sql  select_feeds.sql  select_feeds_for_sync.sql  select_post.sql  select_saved_posts.sql  select_unread_posts.sql  select_urls.sql  toggle_saved.sql
src/: lib.rs  main.rs  state.rs
src/handlers/: error.rs  feeds_.rs  go.rs  index_.rs  middleware.rs  mod.rs  read_.rs  redirect.rs  saved_.rs  session.rs  url.rs
src/rss/: feed.rs  mod.rs
templates/: 404.html  base.html  feed.html  feed_preview.html  feeds.html  index.html  login.html  read.html  saved.html
