[package]
name = "jazz_reader"
version = "0.1.0"
authors = ["Gorm Casper <gcasper@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
lazy_static = "1.0"
config = "0.7"
r2d2 = "0.8"
r2d2_postgres = "0.14"
postgres = "0.15"
rss = { version = "1.5", features = ["from_url"] }
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
reqwest = "0.8"
failure = "0.1"
log = "0.4.0"
env_logger = "0.6.0"
